--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_GATEWAY_URI=http://34.2.5.32:3003
-VITE_TEST_STORE_URI=http://localhost:3005/api
+VITE_TEST_STORE_URI=http://34.2.5.32:3005/api
 BASE_URL_USER_MS = http://34.2.5.32:3001/api/users
